test/seq/cmdlists/ttl_mask_err2.err
SyntaxError: Hex literal out of range [0x0, 0xffffffff]
Line: 2
ttl_mask = 0x1ffffffff
           ~~~~~~~~~~~
